# mochiday

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  pyproject.toml
job-search-in-hell/: __init__.py  __main__.py  app.py
job-search-in-hell/utils/: database.py  engine.py  validator.py
node-test/: .gitignore  fails.txt  package-lock.json  package.json  tsconfig.json
node-test/database/: queries.ts  supabase.ts
node-test/src/: index.ts  temp.ts
node-test/src/drivers/: apply.ts  init.ts
node-test/src/types/: shared.ts
node-test/src/utils/: general.ts  resume.ts
server/: .env.example  README.md  app.py  pyproject.toml
server/config/: queries.py
server/utils/: database.py  engine.py  form_fields.py  proxy.py  seed.py
serverless/: .firebaserc  README.md  firebase.json
serverless/functions/: .env.example  .gitignore  main.py  package-lock.json  package.json  requirements.txt  tsconfig.json
serverless/functions/src/: index.ts
web/: .dev.vars.example  .gitignore  README.md  load-context.ts  package-lock.json  package.json  partykit.json  tailwind.config.ts  vite.config.ts  worker-configuration.d.ts  wrangler.toml
web/app/: entry.client.tsx  root.tsx  tailwind.css
web/app/components/: GeneralDashboardLayout.tsx  NextBatchCountdown.tsx  Room.tsx
web/app/config/: config.tsx
web/app/hooks/: useApplication.tsx
web/app/presence/: cursor.tsx  other-cursors.tsx  use-cursors.ts
web/app/routes/: _auth.callback.tsx  _auth.sign-in.$.tsx  _auth.sign-up.$.tsx  _auth.tsx  _index.tsx  (+7 more)
web/functions/: [[path]].ts
web/party/: presence.ts
(+44 files in other folders)
