[tool.poetry]
name = "mochiday"
version = "0.1.0"
description = "God-mode for job search."
authors = ["Nataliya Karmarkar <nkarmarkar@usfca.edu>", "Xipu Li <xli200@usfca.edu>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
yagooglesearch = "^1.9.0"
beautifulsoup4 = "^4.12.3"
flask = "^3.0.2"
python-dotenv = "^1.0.1"
supabase = "^2.4.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
